compiler-core/src/type_/tests/snapshots/glistix_core__type___tests__nix__nix_unsafe_int_in_tuple.snap
---
source: compiler-core/src/type_/tests/nix.rs
expression: "\n  #(9_223_372_036_854_775_808)\n"
---
----- SOURCE CODE

  #(9_223_372_036_854_775_808)


----- ERROR
error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:2:5
  │
2 │   #(9_223_372_036_854_775_808)
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).
