compiler-core/src/type_/tests/snapshots/glistix_core__type___tests__nix__nix_unsafe_int_octal.snap
---
source: compiler-core/src/type_/tests/nix.rs
expression: "\n  [\n    0o777777777777777777776,\n    0o777777777777777777777,\n    0o1000000000000000000000,\n  ]\n"
---
----- SOURCE CODE

  [
    0o777777777777777777776,
    0o777777777777777777777,
    0o1000000000000000000000,
  ]


----- ERROR
error: Int is outside Nix's integer range
  ┌─ /src/one/two.gleam:5:5
  │
5 │     0o1000000000000000000000,
  │     ^^^^^^^^^^^^^^^^^^^^^^^^

This integer value is too large to be represented by Nix's integer type. To
avoid this error integer values must be in the range -(2^63 - 1) - (2^63 -
1).
